# cvkg

./: ..gitignore.kate-swp  .gitignore  3D-MIGRATION-ANALYSIS.md  3D-MIGRATION-STATUS.md  ADELE_UI_PLAN.md  AGENTS.md  AGENT_LOG.md  ARC_SWAP_STM_STATE_IMPLEMENTATION_PLAN.md  AUDIT.md  CHANGELOG.md  CONTRIBUTING.md  CVKG-Master-Audit-Report.md  CVKG-O-fuckit.md  CVKG-opus-1.md  CVKG-opus.md  CVKG_EVALUATION_REPORT.md  CVKG_GLASS_EFFECTS_STATUS.md  CVKG_Goof.md  CVKG_MASTER_AUDIT.md  CVKG_PERFORMANCE_OPTIMIZATIONS.md  CVKG_PRODUCTION_READINESS_ASSESSMENT.md  CVKG_deus_ex.md  CVKG_fuckit.md  CVKG_g_fuckit.md  CVKG_improvements.MD  CVKG_n_fuckit.md  Cargo.toml  EVALUATION_PLAN.md  GPU_PIPELINE_AUDIT.md  GPU_PIPELINE_AUDIT_V2.md  Google_audit.md  IMPLEMENTATION-PLAN.md  IMPLEMENTATION_PLAN.md  Kvasir_Graph_Implementation_Plan.md  Kvasir_Graph_Implementation_Plan_1.md  Kvasir_Graph_Implementation_Plan_2.md  LICENSE  LICENSE-MIT  Modern_UI.md  P1_13_EXTRACTION_PLAN.md  (+80 more)
berserker/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md
berserker/src/: main.rs
berserker/themes/: default.rs
cvkg-accessibility/: Cargo.toml  README.md
cvkg-accessibility/src/: bridge.rs  focus.rs  lib.rs  tree.rs
cvkg-anim/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-anim/src/: advanced_particles.rs  behavior.rs  easing.rs  geometry.rs  growth.rs  lib.rs  momentum.rs  morph.rs  particles.rs  physics.rs  shader_anim.rs  skeletal.rs  spring_snap.rs  verlet.rs
cvkg-certification/: Cargo.toml  README.md
cvkg-certification/src/: lib.rs
cvkg-certification/tests/: pipeline_cert.rs  scene_layout_render.rs
cvkg-cli/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-cli/src/: agent_replay.rs  asset_pipeline.rs  build_pipeline.rs  config.rs  dashboard.html  dev_runtime.rs  devtools.rs  devtools_dashboard.rs  error.rs  handlers.rs  lib.rs  main.rs  native_shell.rs  patch_engine.rs  plugin.rs  raster_export.rs  runtime_connection.rs  scaffold.rs  token_export.rs  webkit_server.rs  ws_server.rs
cvkg-components/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  Cargo.toml.orig  README.md  TLDR.md  big_kahuna_burger.md  cvkg-com-pool.md
cvkg-components/examples/: ai_workflow_example.rs  animation_triggers_demo.rs  basic_button_demo.rs  basic_slider_demo.rs  basic_text_demo.rs  basic_toggle_demo.rs  component_feature_showcase.rs  error_boundary_demo.rs  forge_effects_demo.rs  interactive_demo.rs  memory_system_demo.rs  niflheim_demo.rs  norse_tools_example.rs  tactical_hud_showcase.rs  test_button.rs  vanir_tools_example.rs
cvkg-components/src/: a11y_beacon.rs  a11y_inspector.rs  advanced.rs  advanced_forms.rs  agent_chat.rs  ai_components.rs  ai_workflow_builder.rs  anim.rs  animation_triggers.rs  asset_browser.rs  autocomplete.rs  await_veil.rs  bifrost_tabs.rs  bragi_creative.rs  breadcrumb.rs  button_group.rs  calendar.rs  card.rs  clipped_corner.rs  collaboration.rs  combobox.rs  command.rs  command_palette.rs  computed_signal.rs  consent_gate.rs  container.rs  context_menu.rs  data_grid.rs  datepicker.rs  devtools.rs  dialog.rs  direction.rs  display.rs  docking_workspace.rs  drop_vault.rs  dropdown_menu.rs  editable.rs  effects.rs  eir_motion.rs  error.rs  (+93 more)
cvkg-components/tests/: accessibility_tests.rs  component_tests.rs  memory_leak_prevention.rs  snapshot_tests.rs  tactical_tests.rs  theming_test.rs
cvkg-components/typescript/: AgentChat.ts  Avatar.ts  Badge.ts  Button.ts  Charts.ts  Checkbox.ts  Drawer.ts  Editable.ts  Grid.ts  HStack.ts  Input.ts  Kanban.ts  Kbd.ts  MentionInput.ts  Modal.ts  PhoneInput.ts  Popconfirm.ts  Popover.ts  PromptForge.ts  QRCode.ts  RunesTable.ts  Select.ts  Separator.ts  Skeleton.ts  Slider.ts  Sonner.ts  Textarea.ts  Toggle.ts  Tooltip.ts  TreeView.ts  VStack.ts  ZStack.ts
cvkg-compositor/: AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-compositor/src/: engine.rs  layer.rs  lib.rs  template.rs
cvkg-core/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-core/src/: a11y_prefs.rs  accessibility.rs  agents.rs  animation.rs  aria.rs  asset.rs  audio_haptic.rs  clipboard.rs  color.rs  data_table.rs  dependency.rs  dirty_flags.rs  dirty_region.rs  document.rs  elevation.rs  env.rs  env_core.rs  erased_view.rs  error_boundary.rs  error_types.rs  event.rs  file_dialog.rs  focus.rs  form_validation.rs  frame_renderer.rs  future_views.rs  geometry_modifiers.rs  gpu.rs  hooks.rs  identity.rs  keyboard.rs  knowledge.rs  layout.rs  lib.rs  localization.rs  material.rs  menu.rs  mesh.rs  (+27 more)
cvkg-export-raster/: Cargo.toml  README.md
cvkg-flow/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  Cargo.toml.orig  README.md  TLDR.md  audit_repro.rs
cvkg-gallery/: COVERAGE.md  Cargo.toml  README.md
cvkg-icons/: AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-inputs/: Cargo.toml
cvkg-layout/: .cargo_vcs_info.json  AGENTS.md  AUDIT_REPORT.md  Cargo.toml  README.md  TLDR.md
cvkg-macros/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-materials/: Cargo.toml  README.md
cvkg-physics/: AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-reflect/: Cargo.toml  README.md
cvkg-render-gpu/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  Cargo.toml.orig  README.md  TLDR.md  build.rs  dependency_graph.mmd  kvasir.txt  types.txt
cvkg-render-native/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  Cargo.toml.orig  README.md  TLDR.md
cvkg-render-software/: AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-render-web/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md  build.rs
cvkg-runic-text/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  Cargo.toml.orig  README.md  TLDR.md
cvkg-scene/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  Cargo.toml.orig  README.md  TLDR.md
cvkg-scheduler/: Cargo.toml  README.md
cvkg-spatial/: Cargo.toml  README.md
cvkg-svg-filters/: AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-test/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  README.md  TLDR.md
cvkg-themes/: .cargo_vcs_info.json  AGENTS.md  Cargo.toml  Cargo.toml.orig  README.md  TLDR.md
(+622 files in other folders)
