[workspace]
resolver = "2"
members = [
    "cvkg",
    "cvkg-core",
    "cvkg-scene",
    "cvkg-layout",
    "cvkg-anim",
    "cvkg-render-native",
    "cvkg-render-gpu",
    "cvkg-render-web",
    "cvkg-vdom",
    "cvkg-cli",
    "cvkg-webkit-server",
    "cvkg-components",
    "cvkg-themes",
    "cvkg-macros",
    "cvkg-runic-text", "cvkg-test",
    "demos/niflheim-web", "demos/adele-web", "temp-server",
    "cvkg-flow",
]

[workspace.package]
version = "0.1.14"
edition = "2024"
license = "MIT"
repository = "https://github.com/sydonayrex/cvkg"
description = "Cyber Viking Kvasir Graph (CVKG) - High-fidelity agentic UI framework"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", default-features = false, features = ["sync"] }
log = "0.4"
notify = "6.0"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.29", features = ["serde", "bytemuck"] }
tobj = "4.0"
stl_io = "0.7"
bincode = "1.3"
# Lock-free RCU reads for top-level state (ArcSwap replaces RwLock on read-dominated paths)
arc-swap = "1.9"
# Software transactional memory for atomic multi-field sub-state mutations (native only)
stm = "0.4"
once_cell = "1.19"
thiserror = "1.0"

