[workspace]
resolver = "2"
members = [
    "cvkg",
    "cvkg-core",
    "cvkg-scene",
    "cvkg-layout",
    "cvkg-anim",
    "cvkg-render-native",
    "cvkg-render-gpu",
    "cvkg-render-web",
    "cvkg-vdom",
    "cvkg-cli",
    "cvkg-webkit-server",
    "cvkg-components",
    "cvkg-themes",
    "cvkg-macros",
    "cvkg-runic-text", "cvkg-test",
    "demos/niflheim-web", "demos/adele-web", "demos/niflheim-wasi", "demos/berserker-fire-web",
    "cvkg-flow",
    "berserker",
]

[workspace.package]
version = "0.1.22"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sydonayrex/cvkg"
description = "Cyber Viking Kvasir Graph (CVKG) - High-fidelity agentic UI framework"
[workspace.dependencies]
cvkg-core = { path = "cvkg-core", version = "0.1.22" }
cvkg-vdom = { path = "cvkg-vdom", version = "0.1.22" }
cvkg-scene = { path = "cvkg-scene", version = "0.1.22" }
cvkg-layout = { path = "cvkg-layout", version = "0.1.22" }
cvkg-anim = { path = "cvkg-anim", version = "0.1.22" }
cvkg-render-gpu = { path = "cvkg-render-gpu", version = "0.1.22" }
runic-text = { package = "cvkg-runic-text", path = "cvkg-runic-text", version = "0.1.22" }
cvkg-runic-text = { path = "cvkg-runic-text", version = "0.1.22" }
cvkg-themes = { path = "cvkg-themes", version = "0.1.22" }
cvkg-macros = { path = "cvkg-macros", version = "0.1.22" }
cvkg-components = { path = "cvkg-components", version = "0.1.22" }
cvkg-test = { path = "cvkg-test", version = "0.1.22" }
cvkg-flow = { path = "cvkg-flow", version = "0.1.22" }
cvkg-webkit-server = { path = "cvkg-webkit-server", version = "0.1.22" }
cvkg-compositor = { path = "cvkg-compositor", version = "0.1.22" }
cvkg-cli = { path = "cvkg-cli", version = "0.1.22" }
cvkg = { path = "cvkg", version = "0.1.22" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", default-features = false, features = ["sync", "rt", "macros"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
log = "0.4"
notify = "6.0"
anyhow = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
glam = { version = "0.29", features = ["serde", "bytemuck"] }
tobj = "4.0"
stl_io = "0.7"
bincode = "1.3"
# Lock-free RCU reads for top-level state (ArcSwap replaces RwLock on read-dominated paths)
arc-swap = "1.9"
# Software transactional memory for atomic multi-field sub-state mutations (native only)
stm = "0.4"
once_cell = "1.19"
thiserror = "1.0"
libc = "0.2"
clap = { version = "4.5", features = ["derive"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
image = "0.25"
rayon = "1.12"
wgpu = { version = "29", features = ["spirv"] }
naga = { version = "29", features = ["wgsl-in", "spv-out"] }

# SVG Editor external dependencies
# SVG/XML parsing
roxmltree = "0.20"
# Node arena for svg-doc
slotmap = { version = "1.0", features = ["serde"] }
# Bezier math (arc-length, nearest-point, subdivision)
kurbo = "0.11"
# Native file open/save dialogs
rfd = "0.15"
# System clipboard read/write
arboard = "3.4"

[patch.crates-io]
cvkg-core = { path = "cvkg-core" }
cvkg-scene = { path = "cvkg-scene" }
cvkg-layout = { path = "cvkg-layout" }
cvkg-anim = { path = "cvkg-anim" }
cvkg-render-native = { path = "cvkg-render-native" }
cvkg-render-gpu = { path = "cvkg-render-gpu" }
cvkg-render-web = { path = "cvkg-render-web" }
cvkg-vdom = { path = "cvkg-vdom" }
cvkg-components = { path = "cvkg-components" }
cvkg-themes = { path = "cvkg-themes" }
cvkg-macros = { path = "cvkg-macros" }
cvkg-runic-text = { path = "cvkg-runic-text" }
cvkg-cli = { path = "cvkg-cli" }
cvkg-webkit-server = { path = "cvkg-webkit-server" }
cvkg-test = { path = "cvkg-test" }
cvkg-flow = { path = "cvkg-flow" }
cvkg = { path = "cvkg" }