[workspace]
resolver = "2"
members = [
    "cvkg",
    "cvkg-core",
    "cvkg-vdom",
    "cvkg-scene",
    "cvkg-layout",
    "cvkg-anim",
    "cvkg-render-native",
    "cvkg-render-gpu",
    "cvkg-render-software",
    "cvkg-telemetry",
    "cvkg-compositor",
    "cvkg-cli",
    "cvkg-svg-serialize",
    "cvkg-svg-filters",
    "cvkg-webkit-server",
    "cvkg-components",
    "cvkg-inputs",
    "cvkg-stl",
    "cvkg-icons",
    "cvkg-themes",
    "cvkg-macros",
    "cvkg-runic-text", "cvkg-test",
    "cvkg-physics",
    "demos/adele-web", "demos/niflheim-wasi", "demos/berserker-fire-web",
    "demos/berserker",
    "cvkg-flow",
    # Platform infrastructure crates (crosscrate.md audit findings)
    "cvkg-scheduler",
    "cvkg-spatial",
    "cvkg-reflect",
    "cvkg-materials",
    "cvkg-accessibility",
    "cvkg-certification",
    "cvkg-gallery",
    "cvkg-game-hud",
    "cvkg-export-raster",
]

[workspace.package]
version = "0.2.17"
edition = "2024"
rust-version = "1.85"
license = "MPL-2.0"
repository = "https://github.com/sydonayrex/cvkg"
description = "Cyber Viking Kvasir Graph (CVKG) - High-fidelity agentic UI framework"
[workspace.dependencies]
cvkg-core = { path = "cvkg-core", version = "0.2.17" }
cvkg-vdom = { path = "cvkg-vdom", version = "0.2.17" }
cvkg-scene = { path = "cvkg-scene", version = "0.2.17" }
cvkg-layout = { path = "cvkg-layout", version = "0.2.17" }
cvkg-anim = { path = "cvkg-anim", version = "0.2.17" }
cvkg-render-gpu = { path = "cvkg-render-gpu", version = "0.2.17" }
cvkg-render-software = { path = "cvkg-render-software", version = "0.2.17" }
runic-text = { package = "cvkg-runic-text", path = "cvkg-runic-text", version = "0.2.17" }
cvkg-runic-text = { path = "cvkg-runic-text", version = "0.2.17" }
cvkg-physics = { path = "cvkg-physics", version = "0.2.17" }
cvkg-themes = { path = "cvkg-themes", version = "0.2.17" }
cvkg-macros = { path = "cvkg-macros", version = "0.2.17" }
cvkg-components = { path = "cvkg-components", version = "0.2.17" }
cvkg-inputs = { path = "cvkg-inputs", version = "0.2.17" }
cvkg-stl = { path = "cvkg-stl", version = "0.2.17" }
cvkg-test = { path = "cvkg-test", version = "0.2.17" }
cvkg-flow = { path = "cvkg-flow", version = "0.2.17" }
cvkg-webkit-server = { path = "cvkg-webkit-server", version = "0.2.17" }
cvkg-compositor = { path = "cvkg-compositor", version = "0.2.17" }
cvkg-svg-serialize = { path = "cvkg-svg-serialize", version = "0.2.17" }
cvkg-svg-filters = { path = "cvkg-svg-filters", version = "0.2.17" }
cvkg-telemetry = { path = "cvkg-telemetry", version = "0.2.17" }
proptest = "1"
cvkg-cli = { path = "cvkg-cli", version = "0.2.17" }
cvkg = { path = "cvkg", version = "0.2.17" }
# Platform infrastructure crates
cvkg-scheduler = { path = "cvkg-scheduler", version = "0.2.17" }
cvkg-spatial = { path = "cvkg-spatial", version = "0.2.17" }
cvkg-reflect = { path = "cvkg-reflect", version = "0.2.17" }
cvkg-materials = { path = "cvkg-materials", version = "0.2.17" }
cvkg-accessibility = { path = "cvkg-accessibility", version = "0.2.17" }
cvkg-certification = { path = "cvkg-certification", version = "0.2.17" }
cvkg-gallery = { path = "cvkg-gallery", version = "0.2.17" }
cvkg-game-hud = { path = "cvkg-game-hud", version = "0.2.17" }
cvkg-export-raster = { path = "cvkg-export-raster", version = "0.2.17" }
cvkg_components = { path = "cvkg-components", version = "0.2.17" }
cvkg_themes = { path = "cvkg-themes", version = "0.2.17" }
bitflags = "2.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", default-features = false, features = ["sync", "rt", "macros"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = "0.3"
log = "0.4"
tracing = "0.1"
notify = "8.0"
anyhow = "1.0"
bytemuck = { version = "1.25", features = ["derive"] }
glam = { version = "0.33", features = ["serde", "bytemuck"] }
tobj = "4.0"
bincode = "1.3"
# Lock-free RCU reads for top-level state (ArcSwap replaces RwLock on read-dominated paths)
arc-swap = "1.9"
# Software transactional memory for atomic multi-field sub-state mutations (native only)
stm = "0.4"
once_cell = "1.21"
thiserror = "2.0"
libc = "0.2"
clap = { version = "4.6", features = ["derive"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
image = "0.25"
gif = "0.14"
rayon = "1.12"
wgpu = { version = "=29.0.0", features = ["spirv"] }
naga = { version = "=29.0.0", features = ["wgsl-in", "spv-out"] }

# SVG Editor external dependencies
# SVG/XML parsing
roxmltree = "0.21"
# Node arena for svg-doc
slotmap = { version = "1.1", features = ["serde"] }
# Bezier math (arc-length, nearest-point, subdivision)
kurbo = "0.13"
# Native file open/save dialogs
rfd = "0.17"
# System clipboard read/write
arboard = "3.6"
# Audio playback backend for native targets
rodio = { version = "0.22", default-features = false, features = ["wav", "mp3"] }
# SVG serializer (write path) -- usvg is read-only
quick-xml = "0.40"
# SVG parsing and serialization (usvg provides both read and write)
usvg = "0.47"
# Boolean path operations (union, intersect, subtract, xor)
i_overlay = "0.26"

[patch.crates-io]
cvkg-core = { path = "cvkg-core" }
cvkg-scene = { path = "cvkg-scene" }
cvkg-layout = { path = "cvkg-layout" }
cvkg-anim = { path = "cvkg-anim" }
cvkg-render-native = { path = "cvkg-render-native" }
cvkg-render-gpu = { path = "cvkg-render-gpu" }
cvkg-vdom = { path = "cvkg-vdom" }
cvkg-components = { path = "cvkg-components" }
cvkg-compositor = { path = "cvkg-compositor" }
cvkg-themes = { path = "cvkg-themes" }
cvkg-macros = { path = "cvkg-macros" }
cvkg-runic-text = { path = "cvkg-runic-text" }
cvkg-physics = { path = "cvkg-physics" }
cvkg-cli = { path = "cvkg-cli" }
cvkg-svg-serialize = { path = "cvkg-svg-serialize" }
cvkg-svg-filters = { path = "cvkg-svg-filters" }
cvkg-webkit-server = { path = "cvkg-webkit-server" }
cvkg-test = { path = "cvkg-test" }
cvkg-flow = { path = "cvkg-flow" }
cvkg = { path = "cvkg" }
# Platform infrastructure crates
cvkg-scheduler = { path = "cvkg-scheduler" }
cvkg-spatial = { path = "cvkg-spatial" }
cvkg-reflect = { path = "cvkg-reflect" }
cvkg-materials = { path = "cvkg-materials" }
cvkg-accessibility = { path = "cvkg-accessibility" }
cvkg-certification = { path = "cvkg-certification" }
cvkg-gallery = { path = "cvkg-gallery" }
cvkg-game-hud = { path = "cvkg-game-hud" }
cvkg-export-raster = { path = "cvkg-export-raster" }
cvkg-telemetry = { path = "cvkg-telemetry" }
cvkg-inputs = { path = "cvkg-inputs" }
cvkg-stl = { path = "cvkg-stl" }
cvkg-icons = { path = "cvkg-icons" }

[profile.dev]
# Limit debug info to prevent memory exhaustion (Bus error) in GitHub Actions
debug = 0

[profile.test]
# Keep some debug info for tests, but limit it to line tables
debug = 1
[profile.profiling]
inherits = "release"
debug = true
