[package]
name = "cvkg-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[[bin]]
name = "cvkg"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.1.16" }
cvkg-macros = { path = "../cvkg-macros", version = "0.1.16" }
clap = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
axum = { version = "0.7", features = ["ws"] }
futures-util = "0.3"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = "0.1.44"
log = "0.4.29"
notify = { workspace = true }
anyhow = { workspace = true }
webbrowser = "1.0"
walkdir = "2.5.0"
tokio-tungstenite = "0.29.0"
indicatif = "0.18.4"
console = "0.16.3"
