[package]
name = "cvkg-components"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
cvkg-core = { path = "../cvkg-core" }
cvkg-layout = { path = "../cvkg-layout" }
cvkg-anim = { path = "../cvkg-anim" }
cvkg-themes = { path = "../cvkg-themes" }
cvkg-vdom = { path = "../cvkg-vdom" }
log = "0.4"

[dev-dependencies]
insta = "1.47.2"
winit = "0.30"
cvkg-render-gpu = { path = "../cvkg-render-gpu" }
cvkg-render-native = { path = "../cvkg-render-native" }
cvkg-macros = { path = "../cvkg-macros" }
pollster = "0.3"
