[package]
name = "cvkg-compositor"
version = "0.2.16"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sydonayrex/cvkg"
description = "Cyber Viking Kvasir Graph (CVKG) - High-fidelity agentic UI framework"

[dependencies]
tracing = { workspace = true }
cvkg-core = "0.2.16"
glam = { version = "0.33", features = ["serde", "bytemuck"] }
log = "0.4"
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
[target.'cfg(target_arch = "wasm32")'.dependencies]