[package]
name = "cvkg-core"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
tobj = { workspace = true }
stl_io = { workspace = true }
