[package]
name = "cvkg-core"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
tobj = { workspace = true }
stl_io = { workspace = true }
# Lock-free RCU for top-level state reads (replaces RwLock on read-dominated paths)
arc-swap = { workspace = true }
once_cell = { workspace = true }
thiserror = { workspace = true }


[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# STM for composable atomic multi-field mutations; excluded from WASM (requires pthreads)
stm = { workspace = true }
