[package]
name = "cvkg-flow"
version = "0.1.14"
edition = "2024"
license = "MIT"
description = "Node-based graph components for CVKG"

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.1.14" }
cvkg-scene = { path = "../cvkg-scene", version = "0.1.14" }
cvkg-themes = { path = "../cvkg-themes", version = "0.1.14" }
serde = { version = "1.0", features = ["derive"] }
slotmap = "1.0"
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
serde_json = "1.0"
