[package]
name = "cvkg-flow"
version.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
description.workspace = true

[dependencies]
cvkg-core = { workspace = true }
cvkg-scene = { workspace = true }
cvkg-themes = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
slotmap = "1.0"
glam = { version = "0.29", features = ["serde"] }
rand = "0.8"

[dev-dependencies]
serde_json = "1.0"
