[package]
name = "cvkg-gallery"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cvkg = { workspace = true, features = ["native"] }
cvkg-components = { workspace = true }
cvkg-core = { workspace = true }
stacker = "0.1"
libc = "0.2"

[dev-dependencies]
cvkg-render-software = { workspace = true }
cvkg-runic-text = { workspace = true }

[[test]]
name = "trace_gallery"
path = "tests/trace_gallery.rs"
