[package]
name = "cvkg-layout"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[features]
default = []
parallel = ["rayon"]

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.1.20" }
taffy = "0.6"
rayon = { workspace = true, optional = true }
