[package]
name = "cvkg-macros"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[lib]
proc-macro = true

[dev-dependencies]
cvkg-core = { path = "../cvkg-core" }
cvkg-components = { path = "../cvkg-components" }