[package]
name = "cvkg-materials"
version = "0.2.14"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sydonayrex/cvkg"
description = "CVKG material system — Glass, Mica, Acrylic, Elevation data models"

[lib]
name = "cvkg_materials"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
log = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
