[package]
name = "cvkg-physics"
version = "0.2.8"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sydonayrex/cvkg"
description = "Rigid body physics simulation for CVKG — collision detection, constraint solving, scene graph bridge"

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.2.8" }
cvkg-scene = { path = "../cvkg-scene", version = "0.2.8" }
glam = { workspace = true }
log = { workspace = true }
