[package]
name = "cvkg-render-gpu"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.1.11" }
runic-text = { package = "cvkg-runic-text", path = "../cvkg-runic-text", version = "0.1.11" }
wgpu = "29.0.1"
winit = "0.30"
swash = "0.2.7"
naga = "0.14"
bytemuck = { workspace = true }
glam = { workspace = true }
image = "0.25"
lyon = "1.0"
usvg = "0.44"
# ShieldWall — accessibility layer (AccessKit backend)
accesskit        = "0.24"
accesskit_winit  = "0.32"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
accesskit_unix = { version = "0.21", optional = true }

[dev-dependencies]
pollster = "0.4.0"
