[package]
name = "cvkg-render-gpu"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
cvkg-core = { workspace = true }
runic-text = { workspace = true }
wgpu = { workspace = true }
winit = "0.30"
swash = "0.2.7"
naga = { workspace = true }
bytemuck = { workspace = true }
glam = { workspace = true }
image = "0.25"
lyon = "1.0"
usvg = "0.44"
futures = "0.3"
log = { workspace = true }
rayon = { workspace = true }
lru = "0.12"
# ShieldWall — accessibility layer (AccessKit backend)
accesskit        = "0.24"
accesskit_winit  = "0.32"

[target.'cfg(any(target_os = "linux", target_os = "freebsd", target_os = "dragonfly", target_os = "openbsd", target_os = "netbsd"))'.dependencies]
accesskit_unix = { version = "0.21", optional = true }

[[bench]]
name = "large_tree"
harness = false

[dev-dependencies]
criterion = "0.5"
pollster = "0.4.0"

[build-dependencies]
naga = { version = "0.14", features = ["wgsl-in", "spv-out", "validate"] }
