[package]
name = "cvkg-render-native"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.1.15" }
runic-text = { package = "cvkg-runic-text", path = "../cvkg-runic-text", version = "0.1.15" }
winit = "0.30"
accesskit = "0.22"
accesskit_winit = "0.30"
log = "0.4"
cvkg-render-gpu = { path = "../cvkg-render-gpu", version = "0.1.15" }
cvkg-vdom = { path = "../cvkg-vdom", version = "0.1.15" }
tokio = { version = "1.0", features = ["rt-multi-thread"] }
# Lock-free RCU for image/texture cache (replaces RwLock in Phase 4)
arc-swap = { workspace = true }
libc = { workspace = true }
