[package]
name = "cvkg-render-software"
version = "0.2.12"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sydonayrex/cvkg"

[features]
default = ["text"]
text = ["cvkg-runic-text"]

[dependencies]
cvkg-core = { path = "../cvkg-core" }
cvkg-runic-text = { path = "../cvkg-runic-text", optional = true }
