[package]
name = "cvkg-render-software"
version = "0.2.13"
edition = "2024"
license = "MPL-2.0"
repository = "https://github.com/sydonayrex/cvkg"
description = "CVKG internal crate"

[features]
default = ["text"]
text = ["cvkg-runic-text"]

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.2.13" }
cvkg-runic-text = { path = "../cvkg-runic-text", version = "0.2.13", optional = true }
glam = "0.30"
log = "0.4"
