[package]
name = "cvkg-render-web"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wgpu = { version = "29.0.1", features = ["webgpu"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
getrandom = { version = "0.4", features = ["wasm_js"] }
log = "0.4"
console_log = "1.0"
bytemuck = { version = "1.14", features = ["derive"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Performance",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlDivElement",
    "CssStyleDeclaration",
    "Location",
    "CanvasRenderingContext2d",
    "CanvasGradient",
    "CanvasPattern",
    "Element",
    "Node",
    "TextMetrics",
    "Response",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "WebSocket",
    "BinaryType",
    "MessageEvent",
    "CloseEvent",
    "ErrorEvent",
    "PointerEvent",
    "KeyboardEvent",
    "WebGl2RenderingContext",
    "Gpu",
    "GpuAdapter",
    "GpuDevice",
    "GpuCanvasContext",
    "GpuTextureFormat",
    "GpuCanvasConfiguration",
    "DomRect"
] }
cvkg-core = { path = "../cvkg-core", version = "0.1.15" }
cvkg-vdom = { path = "../cvkg-vdom", version = "0.1.15" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Lock-free RCU for image/texture cache; arc-swap is wasm32-compatible (no pthreads)
arc-swap = { workspace = true }

[features]
webgpu = []
default = ["webgpu"]

[build-dependencies]
naga = { version = "29.0.1", features = ["wgsl-in", "spv-out"] }
