[package]
name = "cvkg-runic-text"
version = "0.1.11"
edition = "2024"
license = "MIT"
description = "Natively integrated Cyber Viking text shaping and layout engine for CVKG"

[dependencies]
rustybuzz = "0.14"
swash = "0.2"
fontdb = "0.16"
unicode-bidi = "0.3"
unicode-segmentation = "1.10"
unicode-linebreak = "0.1"
lru = "0.12"
serde = { workspace = true }
log = { workspace = true }
glam = { workspace = true }
bytemuck = { workspace = true }
