[package]
name = "cvkg-scene"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.1.9" }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { version = "1.34", features = ["json"] }
cvkg-components = { path = "../cvkg-components", version = "0.1.9" }
