[package]
name = "cvkg-scene"
version.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
edition.workspace = true

[dependencies]
cvkg-core = { path = "../cvkg-core", version = "0.1.20" }
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }

[dev-dependencies]
insta = { version = "1.34", features = ["json"] }
cvkg-components = { path = "../cvkg-components" }
cvkg-vdom = { path = "../cvkg-vdom" }